--- a/package.json
+++ b/package.json
@@ -1,29 +1,69 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "skill-a-bit-app",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "vercel-build": "prisma generate && next build",
+    "postbuild": "NODE_OPTIONS='--experimental-json-modules' && node ./scripts/generate-sitemap.mjs",
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.5.0",
-    "@heroicons/react": "^1.0.6",
-    "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "@next-auth/prisma-adapter": "^1.0.1",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "autoprefixer": "^10.4.1",
+    "aws-sdk": "^2.1053.0",
+    "axios": "^0.25.0",
+    "contentlayer": "^0.0.33",
+    "html-to-image": "^1.9.0",
+    "install": "^0.13.0",
+    "joi": "^17.6.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "next": "^12.0.8",
+    "next-auth": "^4.1.2",
+    "next-contentlayer": "^0.0.33",
+    "next-pwa": "^5.4.4",
+    "next-themes": "^0.0.15",
+    "npm": "^8.3.2",
+    "postcss": "^8.4.5",
+    "react": "17.0.2",
+    "react-countdown": "^2.3.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.25.0",
+    "react-lottie": "^1.2.3",
+    "react-player": "^2.9.0",
+    "react-toastify": "^8.2.0",
+    "swr": "^1.1.2",
+    "tailwindcss": "^3.0.11"
   },
   "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3"
+    "@prisma/client": "3.7",
+    "@tailwindcss/typography": "^0.5.0",
+    "@types/dom-to-image": "^2.6.4",
+    "@types/file-saver": "^2.0.5",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-lottie": "^1.2.6",
+    "eslint": "8.6.0",
+    "eslint-config-next": "12.0.7",
+    "globby": "^12.2.0",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.5",
+    "prisma": "3.7",
+    "reading-time": "^1.5.0",
+    "rehype": "^12.0.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.0.3",
+    "rehype-prism-plus": "^1.3.1",
+    "rehype-slug": "^5.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-toc": "^8.0.1",
+    "typescript": "4.5.4"
   }
 }
