--- a/package.json
+++ b/package.json
@@ -18,18 +18,12 @@
     "autoprefixer": "^10.4.1",
     "aws-sdk": "^2.1053.0",
     "axios": "^0.25.0",
-    "contentlayer": "^0.0.33",
     "html-to-image": "^1.9.0",
-    "install": "^0.13.0",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
     "next": "^12.0.8",
     "next-auth": "^4.1.2",
-    "next-contentlayer": "^0.0.33",
     "next-pwa": "^5.4.4",
-    "next-themes": "^0.0.15",
-    "npm": "^8.3.2",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -39,7 +33,7 @@
     "tailwindcss": "^3.0.11"
   },
   "devDependencies": {
-    "@prisma/client": "3.7",
+    "@prisma/client": "^3.13.0",
     "@tailwindcss/typography": "^0.5.0",
     "@types/dom-to-image": "^2.6.4",
     "@types/file-saver": "^2.0.5",
@@ -52,15 +46,7 @@
     "globby": "^12.2.0",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.5",
-    "prisma": "3.7",
-    "reading-time": "^1.5.0",
-    "rehype": "^12.0.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-code-titles": "^1.0.3",
-    "rehype-prism-plus": "^1.3.1",
-    "rehype-slug": "^5.0.1",
-    "remark-gfm": "^3.0.1",
-    "remark-toc": "^8.0.1",
+    "prisma": "^3.13.0",
     "typescript": "4.5.4"
   }
 }
