--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skill-a-bit-app",
+  "name": "the-ant-analytics",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -18,7 +18,6 @@
     "autoprefixer": "^10.4.1",
     "aws-sdk": "^2.1053.0",
     "axios": "^0.25.0",
-    "html-to-image": "^1.9.0",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
     "next": "^12.0.8",
@@ -28,7 +27,6 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.0",
-    "react-lottie": "^1.2.3",
     "react-toastify": "^8.2.0",
     "tailwindcss": "^3.0.11"
   },
