--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.0",
     "react-toastify": "^8.2.0",
+    "recharts": "^2.1.10",
     "tailwindcss": "^3.0.11"
   },
   "devDependencies": {
