--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^8.2.0",
     "recharts": "^2.1.10",
     "tailwindcss": "^3.0.11"
