--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "autoprefixer": "^10.4.1",
     "aws-sdk": "^2.1053.0",
     "axios": "^0.25.0",
+    "bcrypt": "^5.0.1",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
     "next": "^12.0.8",
-    "next-auth": "^4.3.4",
+    "next-auth": "^4.6.1",
     "next-pwa": "^5.4.4",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.0",
+    "react-hot-toast": "^2.2.0",
     "react-table": "^7.8.0",
     "react-toastify": "^8.2.0",
     "recharts": "^2.1.10",
