--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-lottie": "^1.2.6",
+    "@types/react-table": "^7.7.12",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "globby": "^12.2.0",
